# shoulders-of-giants

./: README.md
.github/workflows/: cmake-demo.yml
cmake_demo/: .gitignore  CMakeLists.txt
cmake_demo/build-script/: build.sh
cmake_demo/src/: CMakeLists.txt  main.cpp
cmake_demo/src/myadd/: CMakeLists.txt  myadd.cpp
cmake_demo/src/mysub/: CMakeLists.txt  mysub.cpp
epoll_cs_demo/: client  client.cpp  common.h  generate.sh  server  server.cpp
image_recognition_demo/python/: ocr_by_baidu_api.py  ocr_by_baidu_web.py  orc_by_tesseract.py
mysql_udf_demo/windows/mysql_udf_c++/: mysql_udf_c++.sln
select_cs_demo/linux_version/: client.cpp  common.h  server.cpp
select_cs_demo/linux_version_ipv4_ipv6/: client-ipv4-ipv6.cpp  server-ipv4-ipv6.cpp
select_cs_demo/linux_version_simple_socket/: client.cpp  server.cpp
select_cs_demo/windows_version_simple_socket/: client.cpp  server.cpp
select_cs_demo/windows_vesion/: client.cpp  client.vcproj  common.h  select_cs_demo.sln  server.cpp  server.vcproj
web_crawler_demo/advanced_crawler_game/: crawler_game_step_1.py  crawler_game_step_2.py  crawler_game_step_3.py  crawler_game_step_4.py  crawler_game_step_5.py
web_crawler_demo/image_crawler_with_chinese_url/: image_crawler_with_chinese_url.py
web_crawler_demo/simple_images_crawler/: simple_image_crawler.py
web_crawler_demo/website_htmls_crawler/: upgrade_html_crawler.py  website_html_crawler.py  www.liaoxuefeng.com_python.txt
web_crawler_demo/website_htmls_crawler/htmls_crawler_results/: Day 8 - 构建前端.html  FAQ.html  Python基础.html  Python简介.html  TCP_IP简介.html  (+25 more)
(+5 files in other folders)
